<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Community App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="about_app">حول التطبيق</string>
    <string name="app_version">الإصدار 1.0.0</string>
    <string name="contact_us">تواصل معنا</string>
    <string name="email">البريد الإلكتروني</string>
    <string name="website">الموقع الإلكتروني</string>
    <string name="copyright">جميع الحقوق محفوظة © 2024</string>
</resources>